- readded jetpack as another mutator
- changed grenade primary fire to explode on impact and made secondary fire able to stick to players
- impulse moves now disregard cost and scale depending on available energy
- restored old team balancing behaviour
- added weapon stun effect which impedes movement for a certain time
- made the carrier of the flag/bomb move slower
- instead of always landing a critical when dashing, double the chances
- made power jump move use a powerslide+jump combo rather than a charge