@@ -1099,7 +1099,6 @@ weapmenu = [
                         guitext "impact ppl"
                         guitext "bounce ppl"
                         guitext "impact shot"
-                        guitext "radiate"
                         guitext "traced"
                         guitext "hit owner"
                         guitext "continue"
@@ -1118,7 +1117,6 @@ weapmenu = [
                         varbit2 (format "%1collide" $weapname) 128
                         varbit2 (format "%1collide" $weapname) 256
                         varbit2 (format "%1collide" $weapname) 512
-                        varbit2 (format "%1collide" $weapname) 1024
                     ]
                 ]
                 guistrut 1
@@ -1130,7 +1128,6 @@ weapmenu = [
                         guitext "impact ppl"
                         guitext "bounce ppl"
                         guitext "impact shot"
-                        guitext "radiate"
                         guitext "traced"
                         guitext "hit owner"
                         guitext "continue"
@@ -1149,7 +1146,6 @@ weapmenu = [
                         varbit2 (format "%1flakcollide" $weapname) 128
                         varbit2 (format "%1flakcollide" $weapname) 256
                         varbit2 (format "%1flakcollide" $weapname) 512
-                        varbit2 (format "%1flakcollide" $weapname) 1024
                     ]
                 ]
             ]
